1935500 - Unexpected repos are available after turning on Simple Content Access
- Update content filtering to take consumer facts into account